implemented material edit text library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ apply plugin: 'crashlytics'
 
 repositories {
     maven { url 'http://download.crashlytics.com/maven' }
+    maven { url 'https://oss.sonatype.org/content/groups/public' }
 }
 
 
@@ -69,5 +70,6 @@ dependencies {
     compile 'com.github.asne:asne-twitter:0.3.3'
     compile 'com.github.asne:asne-googleplus:0.3.3'
     compile 'com.afollestad:material-dialogs:0.6.3.5'
+    compile 'com.rengwuxian.materialedittext:library:2.0.0-SNAPSHOT'
     compile 'com.crashlytics.android:crashlytics:1.+'
 }
