--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,31 +66,31 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    // compile 'com.balysv:material-ripple:1.0.1' // still unused
-    compile 'com.android.support:appcompat-v7:22.1.0'
-    compile 'com.android.support:support-v4:22.1.0'
-    compile 'com.android.support:cardview-v7:22.1.0'
-    compile 'com.android.support:recyclerview-v7:22.1.0'
-    compile 'com.android.support:palette-v7:22.1.0'
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.android.support:cardview-v7:22.2.0'
+    compile 'com.android.support:recyclerview-v7:22.2.0'
+    compile 'com.android.support:palette-v7:22.2.0'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
-    compile 'com.jakewharton:butterknife:5.1.2'
+    compile 'com.jakewharton:butterknife:6.1.0'
     compile 'fr.baloomba:viewpagerindicator:2.4.2'
     compile 'com.etsy.android.grid:library:1.0.5'
     compile 'com.sababado.circularview:library:1.0.0'
-    compile 'com.melnykov:floatingactionbutton:1.2.0'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
     compile 'com.squareup.okhttp:okhttp:2.2.0'
-    compile 'com.squareup.picasso:picasso:2.5.0'
-    compile 'com.yalantis:contextmenu:1.0.1'
-    compile 'com.github.navasmdc:MaterialDesign:1.+@aar'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.yalantis:contextmenu:1.0.4'
+    compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
+    compile 'com.balysv:material-ripple:1.0.2'
     compile 'com.github.chrisbanes.photoview:library:1.2.3'
-    compile 'com.github.andkulikov:transitions-everywhere:1.2.2'
+    compile 'com.github.andkulikov:transitions-everywhere:1.3.2'
     compile 'com.github.asne:asne-facebook:0.3.3'
     compile 'com.github.asne:asne-twitter:0.3.3'
     compile 'com.github.asne:asne-googleplus:0.3.3'
-    compile 'com.afollestad:material-dialogs:0.6.3.5'
-    compile 'com.rengwuxian.materialedittext:library:2.0.3'
+    compile 'com.afollestad:material-dialogs:0.7.5.1'
+    compile 'com.rengwuxian.materialedittext:library:2.1.3'
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.eftimoff:androidplayer:1.0.2@aar'
     compile group: 'com.cloudant', name: 'cloudant-sync-datastore-core', version: '0.11.0'
