--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ repositories {
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "21.1.2"
+    buildToolsVersion "22.0.1"
 
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
@@ -93,6 +93,7 @@ dependencies {
     compile 'com.rengwuxian.materialedittext:library:2.1.3'
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.eftimoff:androidplayer:1.0.2@aar'
+    compile 'com.snappydb:snappydb-lib:0.5.0'
     compile group: 'com.cloudant', name: 'cloudant-sync-datastore-core', version: '0.11.0'
     compile group: 'com.cloudant', name: 'cloudant-sync-datastore-android', version: '0.11.0'
     compile 'com.crashlytics.android:crashlytics:1.+'
