--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          package="com.app.afridge">
+<manifest package="com.app.afridge"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
-    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
-    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
 
     <!--we have to be careful when we use the circularview library to check for version number-->
-    <uses-sdk tools:overrideLibrary="com.sababado.circularview, com.yalantis.contextmenu.lib"/>
+    <uses-sdk tools:overrideLibrary="com.sababado.circularview, com.yalantis.contextmenu.lib" />
 
     <application
         android:name=".FridgeApplication"
@@ -30,9 +30,9 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
@@ -44,52 +44,50 @@
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.MainActivity"/>
+                android:value=".ui.MainActivity" />
         </activity>
         <activity
             android:name=".ui.FirstTimeWizardActivity"
-            android:screenOrientation="portrait"
             android:label="@string/title_activity_first_time_wizard"
             android:parentActivityName=".ui.MainActivity"
+            android:screenOrientation="portrait"
             tools:ignore="UnusedAttribute">
 
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.MainActivity"/>
+                android:value=".ui.MainActivity" />
         </activity>
 
         <service
             android:name=".services.ExpirationDateService"
-            android:exported="false"/>
+            android:exported="false" />
 
-        <service
-            android:name="com.app.afridge.services.AuthenticatorService">
+        <service android:name="com.app.afridge.services.AuthenticatorService">
             <intent-filter>
-                <action android:name="android.accounts.AccountAuthenticator"/>
+                <action android:name="android.accounts.AccountAuthenticator" />
             </intent-filter>
             <meta-data
                 android:name="android.accounts.AccountAuthenticator"
-                android:resource="@xml/authenticator"/>
+                android:resource="@xml/authenticator" />
         </service>
 
         <service
             android:name="com.app.afridge.services.SyncService"
-            android:exported="true"
-            android:process=":sync">
+            android:exported="true"><!--android:process=":sync"-->
             <intent-filter>
-                <action android:name="android.content.SyncAdapter"/>
+                <action android:name="android.content.SyncAdapter" />
             </intent-filter>
             <meta-data
                 android:name="android.content.SyncAdapter"
-                android:resource="@xml/syncadapter"/>
+                android:resource="@xml/syncadapter" />
         </service>
 
         <receiver
             android:name=".receivers.BootReceiver"
             android:enabled="false">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
@@ -97,9 +95,9 @@
             android:name=".receivers.NotificationReceiver"
             android:enabled="true">
             <intent-filter>
-                <action android:name="com.app.afridge.DELETE_ITEM"/>
+                <action android:name="com.app.afridge.DELETE_ITEM" />
 
-                <action android:name="com.app.afridge.UNDO_DELETE"/>
+                <action android:name="com.app.afridge.UNDO_DELETE" />
             </intent-filter>
         </receiver>
 
@@ -107,27 +105,27 @@
             android:name="com.app.afridge.sync.provider.StubProvider"
             android:authorities="com.app.afridge.sync.provider"
             android:exported="false"
-            android:syncable="true"/>
+            android:syncable="true" />
 
         <meta-data
             android:name="AA_DB_NAME"
-            android:value="Fridge.db"/>
+            android:value="Fridge.db" />
         <meta-data
             android:name="AA_DB_VERSION"
-            android:value="1"/>
+            android:value="1" />
         <meta-data
             android:name="AA_MODELS"
             android:value="com.app.afridge.dom.FridgeItem, com.app.afridge.dom.HistoryItem,
-            com.app.afridge.dom.NoteItem, com.app.afridge.dom.Ingredient"/>
+            com.app.afridge.dom.NoteItem, com.app.afridge.dom.Ingredient" />
         <meta-data
             android:name="com.crashlytics.ApiKey"
-            android:value="3ae3c2e4d4b673e25fad26e9ce272f215e212049"/>
+            android:value="3ae3c2e4d4b673e25fad26e9ce272f215e212049" />
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
+            android:value="@string/facebook_app_id" />
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
