--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,7 @@ dependencies {
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.eftimoff:androidplayer:1.0.2@aar'
     compile 'com.snappydb:snappydb-lib:0.5.0'
+    compile 'com.kbeanie:image-chooser-library:1.4.4@aar'
     compile group: 'com.cloudant', name: 'cloudant-sync-datastore-core', version: '0.11.0'
     compile group: 'com.cloudant', name: 'cloudant-sync-datastore-android', version: '0.11.0'
     compile 'com.crashlytics.android:crashlytics:1.+'
