--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.app.afridge"
+<manifest
+    package="com.app.afridge"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -12,6 +13,9 @@
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+    <uses-permission android:name="com.google.android.apps.photos.permission.GOOGLE_PHOTOS" />
+    <!--For SkyDrive-->
+    <uses-permission android:name="com.microsoft.skydrive.content.MetadataContentProvider" />
 
     <!--we have to be careful when we use the circularview library to check for version number-->
     <uses-sdk tools:overrideLibrary="com.sababado.circularview, com.yalantis.contextmenu.lib" />
