--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,7 @@ dependencies {
     compile 'com.android.support:palette-v7:22.2.0'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.jakewharton:butterknife:6.1.0'
-    compile 'fr.baloomba:viewpagerindicator:2.4.2'
+    compile 'me.relex:circleindicator:1.1.4@aar'
     compile 'com.etsy.android.grid:library:1.0.5'
     compile 'com.sababado.circularview:library:1.0.0'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
