updated README and implemented gradle javadoc

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,15 @@ buildscript {
     }
 }
 
+if (JavaVersion.current().isJava8Compatible()) {
+    allprojects {
+        tasks.withType(Javadoc) {
+            options.addStringOption('Xdoclint:none', '-quiet')
+        }
+    }
+}
+
+
 allprojects {
     repositories {
         jcenter()
