--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,22 @@ android {
             }
         }
     }
+    android.applicationVariants.all { variant ->
+        task("generate${variant.name.capitalize()}JavaDoc", type: Javadoc) {
+            description "Generates Javadoc for $variant.name."
+            source = variant.javaCompile.source
+            destinationDir = new File("${project.getProjectDir()}/docs/compiled/", variant.baseName)
+            ext.androidJar = "${android.sdkDirectory}/platforms/${android.compileSdkVersion}/android.jar"
+            classpath = files(variant.javaCompile.classpath.files) + files(ext.androidJar)
+            options.memberLevel = JavadocMemberLevel.PRIVATE
+            options {
+                links "http://docs.oracle.com/javase/7/docs/api/"
+                linksOffline "http://d.android.com/reference","${android.sdkDirectory}/docs/reference"
+            }
+            exclude '**/BuildConfig.java'
+            exclude '**/R.java'
+        }
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
