updated Crashlytics plugin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,19 @@
 buildscript {
     repositories {
-        maven { url 'http://download.crashlytics.com/maven' }
+        maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
-        classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.+'
+        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 apply plugin: 'com.android.application'
-apply plugin: 'crashlytics'
+apply plugin: 'io.fabric'
 
 repositories {
-    maven { url 'http://download.crashlytics.com/maven' }
     maven { url 'https://oss.sonatype.org/content/groups/public' }
     maven { url "http://cloudant.github.io/cloudant-sync-eap/repository/" }
+    maven { url 'https://maven.fabric.io/public' }
 }
 
 
@@ -113,6 +113,8 @@ dependencies {
     compile 'com.kbeanie:image-chooser-library:1.4.4@aar'
     compile group: 'com.cloudant', name: 'cloudant-sync-datastore-core', version: '0.11.0'
     compile group: 'com.cloudant', name: 'cloudant-sync-datastore-android', version: '0.11.0'
-    compile 'com.crashlytics.android:crashlytics:1.+'
     compile 'com.android.support:multidex:1.0.0'
+    compile('com.crashlytics.sdk.android:crashlytics:2.3.2@aar') {
+        transitive = true;
+    }
 }
