--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ if (JavaVersion.current().isJava8Compatible()) {
     }
 }
 
+task wrapper(type: Wrapper) {
+    gradleVersion = "2.4"
+}
 
 allprojects {
     repositories {
